--- a/moovitz-frontend/package.json
+++ b/moovitz-frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mysten/zklogin": "^0.7.12",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -26,10 +27,12 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icon-cloud": "^4.1.4",
+    "react-icons": "^5.2.1",
     "react-spring": "^9.7.4",
     "react-tweet": "^3.2.1",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1"
   },
   "devDependencies": {
     "eslint": "^8",
