--- a/moovitz-frontend/package.json
+++ b/moovitz-frontend/package.json
@@ -38,9 +38,10 @@
     "vaul": "^0.9.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "postcss": "^8",
+    "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7"
   }
 }
