--- a/moovitz-frontend/package.json
+++ b/moovitz-frontend/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@mysten/dapp-kit": "^0.14.13",
+    "@mysten/enoki": "^0.3.12",
     "@mysten/sui": "^1.3.1",
     "@mysten/zklogin": "^0.7.12",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.51.15",
     "class-variance-authority": "^0.7.0",
@@ -31,8 +33,10 @@
     "react-dom": "^18",
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.2.1",
+    "react-spinners": "^0.14.1",
     "react-spring": "^9.7.4",
     "react-tweet": "^3.2.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1"
