--- a/moovitz-frontend/package.json
+++ b/moovitz-frontend/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18",
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.2.1",
+    "react-iframe": "^1.8.5",
     "react-spinners": "^0.14.1",
     "react-spring": "^9.7.4",
     "react-tweet": "^3.2.1",
