--- a/moovitz-frontend/package.json
+++ b/moovitz-frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@maptiler/leaflet-maptilersdk": "^2.0.0",
     "@mysten/dapp-kit": "^0.14.13",
     "@mysten/enoki": "^0.3.12",
     "@mysten/sui": "^1.3.1",
@@ -26,6 +27,7 @@
     "cobe": "^0.6.3",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.18",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
