--- a/moovitz-frontend/package.json
+++ b/moovitz-frontend/package.json
@@ -14,7 +14,9 @@
     "@mysten/enoki": "^0.3.12",
     "@mysten/sui": "^1.3.1",
     "@mysten/zklogin": "^0.7.12",
+    "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.1.1",
