--- a/moovitz-frontend/package.json
+++ b/moovitz-frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -21,6 +21,11 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/web3.js": "^1.95.3",
     "@tabler/icons-react": "^3.11.0",
     "@tanstack/react-query": "^5.51.15",
     "class-variance-authority": "^0.7.0",
@@ -33,9 +38,10 @@
     "lucide-react": "^0.416.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
-    "react": "^18",
+    "pino-pretty": "^11.2.2",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.2.1",
     "react-iframe": "^1.8.5",
@@ -53,5 +59,13 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7"
+  },
+  "browser": {
+    "assert": false,
+    "crypto": false,
+    "http": false,
+    "https": false,
+    "stream": false,
+    "zlib": false
   }
 }
