--- a/moovitz-frontend/package.json
+++ b/moovitz-frontend/package.json
@@ -17,9 +17,9 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-phantom": "^0.9.24",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
-    "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.3",
     "@tabler/icons-react": "^3.11.0",
     "@tanstack/react-query": "^5.51.15",
@@ -30,12 +30,12 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.18",
     "lucide-react": "^0.416.0",
-    "next": "14.2.5",
+    "next": "^14.2.7",
     "next-themes": "^0.3.0",
     "pino-pretty": "^11.2.2",
-    "react": "^18.2.0",
+    "react": "^18",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18",
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.2.1",
     "react-iframe": "^1.8.5",
@@ -45,7 +45,8 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.1"
+    "vaul": "^0.9.1",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
@@ -53,5 +54,13 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7"
+  },
+  "browser": {
+    "assert": false,
+    "crpyto": false,
+    "http": false,
+    "https": false,
+    "stream": false,
+    "zlib": false
   }
 }
